--- a/style.css
+++ b/style.css
@@ -1,2 +1,15 @@
-td{border: 2px solid black;
+p{
+    background-color:  violet;
 }
+a{
+    background-color: tomato;
+}
+span{
+    background-color: rgb(172, 238, 144);
+}
+.red{
+    background-color: slateblue;
+}
+div{
+    background-color: lightgray;
+}++
